# SolarImager

./: CMakeLists.txt  DISCLAIMER.md  LICENSE  README.md  gitignore  install.sh
src/: AppSettings.cpp  AppSettings.h  BaslerCamera.cpp  BaslerCamera.h  CMakeLists.txt  CameraInterface.h  FrameGrabber.cpp  FrameGrabber.h  HistogramWidget.cpp  HistogramWidget.h  MainWindow.cpp  MainWindow.h  PlayerOneCameraInterface.cpp  PlayerOneCameraInterface.h  PreviewWidget.cpp  PreviewWidget.h  SSMReader.cpp  SSMReader.h  SeePlot.cpp  SeePlot.h  SerPlayerDialog.cpp  SerPlayerDialog.h  SettingsDialog.cpp  SettingsDialog.h  Theme.h  ZwoCameraInterface.cpp  ZwoCameraInterface.h  main.cpp
